@@ -7,3 +7,4 @@
 #undef HAVE_STPCPY
 #undef GNOME_EXCLUDE_DEPRECATED_SOURCE
 #undef GNOME_EXCLUDE_DEPRECATED
+#undef HAVE_GNOMESUPPORT
