@@ -98,6 +98,13 @@ fi
 dnl
 dnl Start of pkg-config checks
 dnl
+GNOME_PKGCONFIG_CHECK_OPTIONAL_MODULES(LIBGNOMESUPPORT, libgnomesupport-2.0:1.96.0)
+if test x$HAVE_LIBGNOMESUPPORT = xyes ; then
+  AC_DEFINE(HAVE_GNOMESUPPORT)
+fi
+AC_SUBST(LIBGNOMESUPPORT_CFLAGS)
+AC_SUBST(LIBGNOMESUPPORT_LIBS)
+
 GNOME_PKGCONFIG_CHECK_MODULES(ORBIT, ORBit-2.0:2.3.90)
 AC_PATH_PROG(ORBIT_IDL, orbit-idl, no)
 AC_SUBST(ORBIT_CFLAGS)
